<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yrj.examen.offering.HomeActivity">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/tvTitle_text"/>
    <CheckBox
        android:checked="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbHomeOffers"
        android:text="@string/cbHomeOffers_text"/>
    <CheckBox
        android:checked="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbElectronicOffers"
        android:text="@string/cbElectronicOffers_text"/>
    <CheckBox
        android:checked="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbSportsOffers"
        android:text="@string/cbSportsOffers_text"/>
    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        style="@style/divider_style"/>
    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbPriorityOffers"
        android:text="@string/cbPriorityOffers_text"/>
    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/bt_style"
        android:id="@+id/btFilter"
        android:text="@string/btFilter_text"/>
</LinearLayout>
