<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_add_offer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yrj.examen.offering.AddOffer_Activity">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvName_add"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/tvName_add_text"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvStore_add"
            android:text="@string/etStore_add_text"
            android:layout_marginRight="5dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etStore_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate_add"
            android:text="@string/etDate_add_text"
            android:layout_marginRight="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDate_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvType_add"
            android:text="@string/tvType_add_text"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spType_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPriority_add"
            android:text="@string/tvPriority_add_text"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spPriority_add"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btAdd_add"
        android:text="@string/btAdd_add_text"
        style="@style/bt_style"/>



</LinearLayout>
